# GLFW-CMake-starter-learnopengl.com

./: .gitmodules  CMakeLists.txt  README.md  compile_cmake.bat
shaders/: cube_f.glsl  cube_v.glsl  fragment_shader_orange.glsl  fragment_shader_red.glsl  lighting_ball_v.glsl  vertex_shader.glsl
src/: camera.hpp  common.cpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
